Add 6 kucing terbaik

--- a/NekoJourney/Views/Home/Index.cshtml
+++ b/NekoJourney/Views/Home/Index.cshtml
@@ -47,8 +47,8 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-60 col-lg-10">
                 <div class="title text-center">
-                    <h1 class="mb-10">Enam Kopi terbaik menurut kami</h1>
-                    <p>Kopi mana menurut kamu</p>
+                    <h1 class="mb-10">Enam Kucing terbaik menurut kami</h1>
+                    <p>Kucing mana menurut kamu</p>
                 </div>
             </div>
         </div>
@@ -56,15 +56,15 @@
             <div class="col-lg-6">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Kopi Luwak</h4>
+                        <h4>Kucing Persia</h4>
 
                     </div>
                     <p>
-                        Kopi yang satu ini tak hanya terkenal di Indonesia,
-                        tapi juga di dunia. Kopi luwak yang berasal dari kotoran
-                        hewan luwak ini bahkan dinobatkan menjadi kopi termahal di
-                        dunia. Selain karena rasanya yang khas, kopi luwak menjadi
-                        mahal karena prosesnya yang unik dan tak mudah.
+                        Kucing Persia pertama kali ditemukan tahun 1871 dan diakui 
+                        secara resmi pada tahun 1890. Kucing ini menjadi salah satu 
+                        kucing paling populer di kalangan pecinta kucing karena bulunya 
+                        yang lebat dan wajahnya yang menggemaskan. Kucing Persia sendiri 
+                        memiliki jenisnya lagi seperti Short Hair Persian.
                     </p>
                 </div>
             </div>
@@ -73,29 +73,28 @@
             <div class="col-lg-6">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Kopi Jamaika</h4>
+                        <h4>Kucing Ashera</h4>
 
                     </div>
                     <p>
-                        Bukan hanya Kolombia, negara di Benua Amerika lainnya
-                        yang punya jenis kopi sendiri adalah Jamaika dengan kopi
-                        populernya bernama Jamaica Blue Mountain. Terbuat dari kopi
-                        biasa dengan cita rasa luar biasa. Kopi Jamaika terkenal
-                        sebagai kopi kelas premium dengan harga tertinggi di dunia.
+                        Kucing jenis Ashera dikenal sebagai kucing hibrida Afrika 
+                        dan kucing macan Asia. Kucing ini menjadi yang paling langka 
+                        di dunia karena kecerdasan dan kesetiaannya. Kucing ini disilangkan
+                        oleh perusahaan Lifestyle Pets yang berfokus pada hewan peliharaan eksklusif.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Kopi Jawa</h4>
+                        <h4>Kucing British</h4>
 
                     </div>
                     <p>
-                        Daerah di Indonesia yang punya kopi dengan kepopuleran hingga ke seluruh
-                        dunia adalah kopi Jawa. Kopi Jawa sudah diproduksi sejak abad ke-17 oleh
-                        pemerintah Kolonial Belanda waktu itu. Kopi ini terbuat dari kopi arabika
-                        biasa, tapi cita rasa dan kenikmatan yang dihasilkan cukup luarbiasa.
+                        Kucing bulu pendek britania adalah salah satu ras kucing tertua yang 
+                        nenek moyang dipercayai memiliki hubungan dengan bangsa Romawi yang 
+                        pernah dahulu menguasai Inggris. Kucing ini adalah kucing berbadan 
+                        sedang dengan bulu yang pendek.
                     </p>
                 </div>
             </div>
@@ -103,43 +102,41 @@
             <div class="col-lg-6">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Kopi Toraja</h4>
+                        <h4>Kucing Savannah</h4>
                     </div>
                     <p>
-                        Kopi Toraja berasal dari Tanah Toraja, Sulawesi. Kepopuleran kopi Toraja tak
-                        hanya di Indonesia saja, tetapi juga di dunia seperti Jepang dan Amerika Serikat.
-                        Biji kopi yang ditanam terkenal sangat khas dan enak sejak jaman dahulu. Tak ayal karena
-                        Toraja memang merupakan daerah pusat penghasil kopi terbesar di Indonesia.
+                        Kucing ini juga berasal dari hibrida Afrika. Kucing ini merupakan 
+                        hasil dari persilangan kucing domestik dan kucing serval di Afrika.
+                        Ashera adalah salah satu dari ras kucing terbesar di dunia. 
+                        Tingkahnya yang sangat aktif membuat kucing ini membutuhkan ruang yang luas.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Kopi Kona</h4>
+                        <h4>Kucing Russian Blue</h4>
 
                     </div>
                     <p>
-                        Dari deretan kopi termahal di dunia, pasti ada nama kopi Kona di sana.
-                        Kopi dengan cita rasa yang khas dan nikmat ini hanya bisa tumbuh di Hawaii saja.
-                        Tak ayal untuk dapat menikmati atau sekedar mencicipi kopi ini,
-                        kita musti merogoh kocek cukup dalam.
-                        Kopi Kona juga hanya bisa tumbuh di Hawai pada musim-musim tertentu.
+                        Kucing biru rusia adalah salah satu ras kucing yang memiliki bulu 
+                        berwarna perak biru. Kucing ini sangat cerdas dan lucu, tetapi 
+                        cenderung pemalu di sekitar orang asing. Kucing biru rusia merupakan 
+                        kucing yang memiliki ikatan yang erat dengan sahabatnya manusia.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Kopi Lampung</h4>
+                        <h4>Kucing Bengal</h4>
 
                     </div>
                     <p>
-                        Kopi yang bersal dari salah satu daerah diIndonesia yaitu kopi Lampung.
-                        Kopi Lampung sebagian besar masih termasuk dalam jenis kopi robusta.
-                        Kopi yang terkenal dengan rasa dan aromanya yang khas ini
-                        banyak dibudidayakan di dataran tinggi
-                        seperti di sekitar Lampung Tenah, Lampung Barat, dan daerah Tanggamus.
+                        Ras Bengal populer karena keindahan corak bulunya yang seperti 
+                        harimau dengan pola tutul dan garis. Ditemukan oleh seorang 
+                        ilmuwan bernama Dr. Centerwall, kucing ini merupakan hasil 
+                        persilangan dari kucing American Short Hair dan kucing Leopard Asia.
                     </p>
                 </div>
             </div>
@@ -154,8 +151,8 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-60 col-lg-10">
                 <div class="title text-center">
-                    <h1 class="mb-10">Jenis - Jenis Kopi Dari Seluruh Dunia</h1>
-                    <p>Setiap kopi berbeda sesuai tempat asalnya</p>
+                    <h1 class="mb-10">Jenis - Jenis Kucing Dari Seluruh Dunia</h1>
+                    <p>Setiap kucing berbeda sesuai tempat asalnya</p>
                 </div>
             </div>
         </div>
