--- a/NekoJourney/Views/Home/Index.cshtml
+++ b/NekoJourney/Views/Home/Index.cshtml
@@ -158,152 +158,148 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/luwak.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingMoggie.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Luwak</br></h4>
+                    <h4><br>Kucing Moggie</br></h4>
                 </a>
                 <p>
-                    Kopi yang satu ini tak hanya terkenal di Indonesia,
-                    tapi juga di dunia. Kopi luwak yang berasal dari kotoran
-                    hewan luwak ini bahkan dinobatkan menjadi kopi termahal di
-                    dunia. Selain karena rasanya yang khas, kopi luwak menjadi
-                    mahal karena prosesnya yang unik dan tak mudah.
+                    Kucing lokal biasanya dikenal sebagai ‘moggie’  adalah kucing
+                    yang umumnya tinggal di rumah-rumah di Inggris. Kucing ini tidak
+                    memiliki keturunan istimewa dan datang sebagai kucing liar dari 
+                    daratan Afrika yang berbeda sekitar 8.000 tahun sebelum masehi
+                    dan dapat ditemukan di hampir semua tempat dimana manusia hidup
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Arabica.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingExotic.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Arabica</br></h4>
+                    <h4><br>Exotic Shorthair</br></h4>
                 </a>
                 <p>
-                    Kopi Arabica adalah kopi yang paling populer di dunia di antara
-                    kopi lainnya. Ini karena jenis kopi Arabica bisa ditemui di hampir
-                    semua negara di dunia. Kopi arabicaadalah kopi dengan cita rasa dan
-                    aroma yang paling nikmat menurut para pecinta kopi. Tak heran jika
-                    kopi jenis ini dapat menguasai pasar kopi dunia.
+                    Kucing ini dikenal sebagai ‘wash-and-wear Persian’ karena perawatannya
+                    yang mudah, bulunya yang selembut beludru dengan susunan warnanya yang
+                    mempesona. Memiliki ciri yang sama dengan anak kucing adalah hal yang 
+                    paling lucu, dengan mata bulatnya yang besar, telinganya yang kecil, mukanya
+                    yang rata dan hidungnya yang pendek.
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Robusta.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingJapaneseBobtail.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Robusta</br></h4>
+                    <h4><br>Japanese Bobtail</br></h4>
                 </a>
                 <p>
-                    Berikutnya ada kopi robusta yang juga populer di hampir seluruh dunia.
-                    Kopi jenis ini tak hanya tumbuh di daerah berhawa sejuk saja, tapi bisa
-                    juga di daerah yang panas. Cita rasa dan aroma kopi robusta tak senikmat
-                    arabica. Kopi ini cenderung berasa pahit dan sedikit asam,
-                    kandungan kafeinnya juga tinggi.
+                    Japanese Bobtail berbulu panjang telah hidup beberapa abad lamanya di Orient 
+                    yang memiliki bulu yang pendek. Japanese Bobtail adalah kucing yang kuat dan 
+                    sehat dan biasanya memiliki tiga sampai empat anak kucing yang berukuran 
+                    cukup besar dibandingkan dengan ukuran anak yang baru lahir. 
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Liberika.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingKorat.jpeg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Liberika</br></h4>
+                    <h4><br>Korat</br></h4>
                 </a>
                 <p>
-                    Kopi Liberika terbuat dari biji kopi Arabika dan Robusta yang dipadukan
-                    menjadi satu hingga menghasilkan kopi dengan cita rasa kelas dunia. Kopi ini hanya bisa
-                    ditemui di Liberia, Afrika, jadi tak heran jika harga kopi Liberika sangatlah mahal.
-                    Kelebihan dari kopi ini adalah ketika diolah menjadi espresso dan latte.
+                   Korat adalah salah satu jenis kucing tertua di dunia dan dikenal di Negara aslinya,
+                   Thailand sebagai “Si-Sawat” – kucing suci dan pengawas nasib baik. Bulu Korat yang 
+                   bewarna silver memiliki arti dalam legenda terdahulu yang menunjukan kekayaan pada 
+                   saudagar dan pedagar.
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Kolombia.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingMaineCoon.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Kolombia</br></h4>
+                    <h4><br>Maine Coon</br></h4>
                 </a>
                 <p>
-                    Berasal dari Afrika dan masih termasuk dalam jenis kopi arabika,
-                    kopi Kolombia punya cita rasa yang berbeda dari induknya. Meski
-                    dari Afrika, tapi kopi ini dikembangkan di Kolombia dan hanya
-                    bisa ditemui di sana. Rasa yang dihasilkan di setiap seduhannya
-                    jauh lebih nikmat ketimbang kopi arabika biasa.
+                    Maine Coons adalah kucing terbesar dari semua ras kucing domestik. Sebagian besar 
+                    Maine Coon dapat memiliki berat hingga 15 kilogram. Mereka sangat kuat, perkasa, 
+                    dan dapat bertahan dalam iklim yang berat. Jenis ras ini tampaknya merupakan persilangan 
+                    antara kucing domestik berbulu pendek dan kucing luar negeri berbulu panjang
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Excelsa.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingManx.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Excelsa</br></h4>
+                    <h4><br>Manx</br></h4>
                 </a>
                 <p>
-                    Pohon kopi ini bisa tumbuh dibeberapa jenis lahan seperti lahan gambut
-                    dan dataran rendah dengan kisaran 0-750 mdpl.Keunikan lainnya adalah
-                    pohon kopi excelsa dapat tetap tahan pada suhu tinggi dan kekeringan.
-                    Pohon kopi excelsa biasanya bisa mencapai 20 meter. Daunnya besar dan
-                    lebar serta berwarna hijau keabuan.
+                    Ras kucing Manx adalah jenis kucing tanpa ekor dan berbeda dari kucing pada 
+                    umumnya yang tidak berekor dan juga secara keseluruhan penampilannya sedikit 
+                    berbeda karena kaki belakangnya lebih panjang dibandingkan kucing biasa. 
+                    Dan ketika hewan ini berlari, mereka mirip dengan seekor kelinci, sangat menarik untuk disaksikan.
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Jamaika.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingNorwegianForest.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Jamaika</br></h4>
+                    <h4><br>Norwegian Forest Cat</br></h4>
                 </a>
                 <p>
-                    Bukan hanya Kolombia, negara di Benua Amerika lainnya
-                    yang punya jenis kopi sendiri adalah Jamaika dengan kopi
-                    populernya bernama Jamaica Blue Mountain. Terbuat dari kopi
-                    biasa dengan cita rasa luar biasa. Kopi Jamaika terkenal
-                    sebagai kopi kelas premium dengan harga tertinggi di dunia.
+                    Kucing Norwegian Forest adalah jenis keturunan zaman purba yang berasal dari Norwegia, 
+                    lebih dari 500 tahun yang lalu. Bahkan beberapa orang percaya bahwa kucing ini sudah 
+                    berkembang biak sejak 2000 tahun yang lalu. Hewan yang cantik ini juga dikenal sebagai Wegie, 
+                    Norskogkatt, Skogkatt atau Norskskaukatt. 
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Jawa.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingKorat.jpeg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Jawa</br></h4>
+                    <h4><br>Ocicat</br></h4>
                 </a>
                 <p>
-                    Daerah di Indonesia yang punya kopi dengan kepopuleran hingga ke seluruh
-                    dunia adalah kopi Jawa. Kopi Jawa sudah diproduksi sejak abad ke-17 oleh
-                    pemerintah Kolonial Belanda waktu itu. Kopi ini terbuat dari kopi arabika
-                    biasa, tapi cita rasa dan kenikmatan yang dihasilkan cukup luarbiasa.
+                    Ocicat adalah hewan yang besar dan aktif dengan tubuh yang berotot dan berbulu satin 
+                    pendek dan langka yang menunjukan bintik-bintiknya. Pada tahun 1964, Ocicat yang asli 
+                    adalah hasil tak terduga dari percobaan suatu perkawinan yang mencoba untuk menghasilkan 
+                    kucing siam aby-point.
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
                 <img class="img-fluid" src="~/images/Kopi Gayo.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Gayo</br></h4>
+                    <h4><br>Oriental Shorthair</br></h4>
                 </a>
                 <p>
-                    jenis kopi ini berasal dari Tanah Gayo di Aceh. Kopi ini telah dikembangkan
-                    sejak 1908. Kopi Gayo berasal dari pohon kopi yang ditanam di dataran tinggi
-                    dan diolah dengan ketelitian tinggi. Tak heran, jika kopi Gayo punya kulitas
-                    kopi kelas premium.
+                    Oriental Shorthair adalah seekor kucing yang memiliki rasa penasaran yang tinggi dan 
+                    sangat percaya diri, namun kedua hal itu dapat menjadi hal yang menyenangkan dan 
+                    ancaman di dalam rumah. Jenis kucing ini dilimpahi karisma dan kecerdasan, senang 
+                    mengambil resiko dalam hidupnya dan tidak dapat dipungkiri
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Toraja.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingPersian.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Toraja</br></h4>
+                    <h4><br>Persian</br></h4>
                 </a>
                 <p>
-                    Kopi ini berasal dari Tanah Toraja, Sulawesi. Kepopuleran kopi Toraja tak hanya
-                    di Indonesia saja, tetapi juga di dunia seperti Jepang dan Amerika Serikat.
-                    Biji kopi yang ditanam di Toraja terkenal sangat khas dan enak sejak jaman dahulu.
-                    Tak ayal karena Toraja memang merupakan daerah pusat penghasil kopi terbesar di Indonesia.
+                    Kucing Persia adalah kucing ras asing pertama yang diimpor ke Thailand. 
+                    Kucing Persia telah menjadi salah satu ras kucing paling populer baik l
+                    okal maupun internasional. Mereka memiliki kepala bulat yang khas, dengan 
+                    telinga kecil yang membulat di ujungnya.
                 </p>
                 <br></br>
             </div>
             <div class="col-lg-6 col-md-6 single-blog">
-                <img class="img-fluid" src="~/images/Kopi Catimor.jpg" height="100" alt="">
+                <img class="img-fluid" src="~/images/KucingRagdoll.jpg" height="100" alt="">
                 <a href="#">
-                    <h4><br>Kopi Catimor</br></h4>
+                    <h4><br>Ras kucing Ragdoll</br></h4>
                 </a>
                 <p>
-                    Jenis kopi catimor adalah salah satu unsur dari kopi Robusta yang sering ditemui
-                    di daerah Timur. Kopi jenis ini punya keasaman yang rendah seperti halnya robusta.
-                    Untuk menghasilkan after taste yang nikmat setelah meminumnya, kopi ini perlu diolah
-                    dengan baik dan benar. Jika itu dilakukan maka after taste yang dihasilkan adalah
-                    sentuhan fruity dan herbal yang nikmat.
+                    Ragdoll adalah jenis kucing yang cocok untukmu! Kucing yang tenang, lembut 
+                    dan mudah bergaul ini berasal dari Amerika Serikat, sebagaimana nama mereka 
+                    diusulkan, mereka sangat santai dan suka bergantungan di tanganmu seperti 
+                    rag doll. Umumnya mereka beranggapan bahwa sumbernya berkaitan dengan Colourpoint 
+                    Persians.
                 </p>
                 <br></br>
             </div>
